# yt-audio-filter

./: .gitignore  CLAUDE.md  GUI_AUTOMATION.md  MODEL_COMPARISON.md  cut_segments.py  niloya_videos.txt  processed_videos.json  pyproject.toml  requirements-dev.txt  requirements.txt  run_app.bat  run_batch.bat  run_filter.bat  run_filter_mdx.bat  run_filter_parallel.bat  scrape_channel.bat  test_models.bat
.github/workflows/: daily-process.yml
config/: channels.json
deploy/: setup.sh
deploy/oracle-cloud/: README.md  install-dependencies.sh  monitor.sh  run-pipeline.sh  setup-credentials.sh  setup-cron.sh  setup-project.sh  setup-vm.sh
docs/: GITHUB_ACTIONS_SETUP.md  PRD_streamlit_app.md  prd_yt_music_filter.md  streamlit-usage.md
docs/plans/: 2026-04-18-channel-discovery-design.md  2026-04-18-quran-overlay-design.md  2026-04-19-streamlit-app-design.md  2026-04-19-surah-input-design.md
docs/reviews/: 2026-04-25-quran-teacher-wishlist.md  2026-04-25-streamlit-app-review.md
examples/: lesson-plan-week.json  metadata-surah-arrahman.json
scripts/: _fix_upload_metadata.py
src/yt_audio_filter/: __init__.py  __main__.py  audio_concat.py  ayah_data.py  ayah_repeater.py  cartoon_catalog.py  cartoon_search.py  channel_discovery.py  cli.py  cobalt_downloader.py  config.py  (+36 more)
tests/: test_audio_concat.py  test_ayah_data.py  test_ayah_repeater.py  test_cartoon_catalog.py  test_channel_discovery.py  test_download_video_with_metadata.py  test_ffmpeg_cuda_probe.py  test_ffmpeg_overlay.py  test_ffmpeg_overlay_cuda.py  test_lesson_planner.py  test_metadata.py  test_music_removal_helpers.py  test_overlay_cli.py  test_overlay_pipeline_ayah.py  test_overlay_pipeline_numbers.py  test_pair_selector.py  test_pair_state.py  test_quran_audio_source.py  test_quran_text.py  test_render_presets.py  test_set_loop_title_compaction.py  test_streamlit_app_importable.py  test_subtitle_builder.py  test_surah_detector.py  test_surah_resolver.py  test_surah_set_loops.py  test_uploader.py  test_upscale.py
(+19 files in other folders)
