[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yt-audio-filter"
version = "1.0.0"
description = "CLI tool to remove background music from MP4 videos using AI (Demucs)"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Product Team"}
]
keywords = ["audio", "video", "demucs", "vocal-isolation", "music-removal", "ffmpeg", "youtube", "yt-dlp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
    "Topic :: Multimedia :: Video :: Conversion",
]
dependencies = [
    "demucs>=4.0.0",
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "yt-dlp>=2024.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
]
upload = [
    "google-api-python-client>=2.100.0",
    "google-auth-oauthlib>=1.0.0",
]
app = [
    "streamlit>=1.28.0",
    "pillow>=10.0.0",
]

[project.scripts]
yt-audio-filter = "yt_audio_filter.cli:main"
yt-channel-scrape = "yt_audio_filter.scraper:main"

[project.urls]
Homepage = "https://github.com/example/yt-audio-filter"
Documentation = "https://github.com/example/yt-audio-filter#readme"
Repository = "https://github.com/example/yt-audio-filter"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
